# django_boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/example_big/: apps.py
apps/example_big/models/: __init__.py  example_big.py
apps/example_small/: apps.py  models.py
apps/users/: admin.py  managers.py  models.py  selectors.py  services.py
apps/users/api/: serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: conftest.py  test_get_user_api_view.py  test_register_user_api_view.py
commons/mixins/: models.py
commons/redis/: __init__.py
config/: urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
docs/styleguide/: api_view.md  docstring.md  services_and_selectors.md
